// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be invalid for bad kind 1`] = `
{
  "kind": {
    "key": "yup:mixed.oneOf",
    "options": {
      "values": "blog, photo, video",
    },
  },
}
`;

exports[`should be invalid for bad resolution 1 1`] = `
{
  "resolution": {
    "key": "yup:tuple.tooFew",
    "options": {
      "path": "resolution",
      "size": 2,
    },
  },
}
`;

exports[`should be invalid for bad resolution 2 1`] = `
{
  "resolution": {
    "key": "yup:tuple.tooFew",
    "options": {
      "path": "resolution",
      "size": 2,
    },
  },
}
`;

exports[`should be invalid for bad resolution 3 1`] = `
{
  "resolution": [
    {
      "key": "yup:number.positive",
      "options": {
        "path": "resolution[0]",
      },
    },
  ],
}
`;

exports[`should be invalid for bad resolution 4 1`] = `
{
  "resolution": [
    {
      "key": "yup:number.integer",
      "options": {
        "path": "resolution[0]",
      },
    },
  ],
}
`;

exports[`should be invalid for bad uuid 1`] = `
{
  "id": {
    "key": "yup:string.uuid",
    "options": {
      "path": "id",
    },
  },
}
`;

exports[`should be invalid for bad weight 1`] = `
{
  "weight": {
    "key": "yup:number.integer",
    "options": {
      "path": "weight",
    },
  },
}
`;

exports[`should be invalid for empty url 1`] = `
{
  "url": "yup:string.nonEmpty",
}
`;

exports[`should be invalid for extra fields 1`] = `
{
  "": {
    "key": "yup:object.noUnknown",
    "options": {
      "path": "this",
    },
  },
}
`;

exports[`should be invalid for undefined url 1`] = `
{
  "url": "yup:string.nonEmpty",
}
`;
